--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "irazasyed/telegram-bot-sdk": "master-dev",
-        "mgp25/instagram-php": "^2.0"
+        "mgp25/instagram-php": "dev-master"
     }
 }
